﻿2008-04-28  Kornél Pál  <kornelpal@gmail.com>

	* mini.c (mono_jit_compile_method_inner): Use g_warning instead of g_error
	for unsupported METHOD_IMPL_ATTRIBUTE_NATIVE.
	* main.c: Use UTF-8 encoded command line instead of Windows default code
	page on Windows to support Unicode.
	* driver.c (DllMain): New function for mixed-mode assembly support.
	* Makefile.am: Add -Wl,--kill-at to libmono_la_LDFLAGS on Windows to
	export __stdcall functions without decoration.

	Contributed under MIT/X11 license.

2008-04-28  Mark Probst  <mark.probst@gmail.com>

	* tramp-amd64.c, mini-amd64.c: Preserve R11 in the trampoline by
	saving it very early.

2008-04-28  Mark Probst  <mark.probst@gmail.com>

	* mini.h, mini.c: Lots of code for accessing the old RGCTX
	deleted.  The only way to access the new RGCTX is via the
	trampline.

	* mini.c, mini-amd64, mini-x86.c, mini-exceptions.c: Pass the
	vtable instead of the RGCTX to static methods.

	* mini-tramplines.c, tramp-amd64.c, tramp-x86.c: Trampoline for
	accessing the new RGCTX.

	* generic-sharing.c: There is no separation between self, type
	arguments and other types in the RGCTX anymore.

2008-04-25  Jonathan Chambers <joncham@gmail.com>

	* mini-amd64.c (add_general): Remove previous stack adjustment.
	(mono_arch_call_opcode): Remove OP_OUTARG_MEMBASE and instead simply
	adjust stack pointer after pushing args. Adjust ARGS_OFFSET to account
	for 32 bytes of stack space reserved for all calls.
	
	* inssel-amd64.brg (OP_OUTARG_MEMBASE): Remove.
	(OP_AMD64_OUTARG_ALIGN_STACK): Take argument to specify size of stack 
	adjustment.
	
	Code contributed under MIT/X11 license.

2008-04-23  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mini_method_verify): Only verify non-inflated methods, check
	against the root definition, peeling out method and type instantiations.
	Cache verify success results, code that fails verification is still
	checked multiple times.

2008-04-23  Zoltan Varga  <vargaz@gmail.com>
